# xcodeproj

./: .gitignore  .pre-commit-config.yaml  README.md  SUPPORT.md  azure-pipelines.yml  inlinecss.py  pylintrc  pyproject.toml  stylecheck.sh  test.sh
.azure/: azure-pipelines.yml  publish.yml
.github/workflows/: publish.yml  test.yml
scripts/: inlinecss.py
tests/: test_basics.py  test_schemes.py
tests/collateral/One.xcodeproj/: project.pbxproj
tests/collateral/Synchronized/: project.yml
tests/collateral/Synchronized/Sources/: Probe.swift
tests/collateral/Synchronized/Synchronized.xcodeproj/: project.pbxproj
tests/collateral/Two.xcodeproj/: project.pbxproj
tests/collateral/schemes/: CalendarColors.xcscheme  CalendarMeetNow.xcscheme  CalendarMeetingDateTimePicker.xcscheme  CalendarMeetingInsights.xcscheme  CalendarUpNext.xcscheme  CalendarWidgetExt.xcscheme  CalendarWidgetExtDataSourceKit.xcscheme
xcodeproj/: __init__.py  buildphases.py  buildrules.py  files.py  objects.py  other.py  pathobjects.py  pbxobject.py  pbxproject.py  schemes.py  targets.py  xcobjects.py
