[tool.poetry]
name = "xcodeproj"
version = "2.2.5"
description = "A utility for interacting with Xcode's xcodeproj bundle format."

license = "MIT"

authors = ["Dale Myers <dalemy@microsoft.com>"]

readme = 'README.md'

repository = "https://github.com/Microsoft/xcodeproj"
homepage = "https://github.com/Microsoft/xcodeproj"

keywords = ['xcode', 'xcodeproj', 'pbxproj', 'apple']

classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Software Development',
    'Topic :: Utilities',
]

[tool.poetry.dependencies]
python = "^3.10"
platformdirs = "^4.5.0"
deserialize = "^2.0.1"

[tool.poetry.dev-dependencies]
black = "^26.3.1"
mypy = "^1.19.1"
pylint = "^4.0.5"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
requests = "^2.32.5"
types-requests = "^2.32.4"

[[tool.mypy.overrides]]
module = ["deserialize"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
